--- a/src/App.css
+++ b/src/App.css
@@ -1,344 +1,429 @@
-body {
-  @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
-  --black-color: #333333;
-  --gray-color: #EAEAEA;
-  --beige-color: #E1AF93;
-  --dark-beige: #E1AF93;
-  --BlueGray-color: #EDF3F5;
-  --dark-gray: #D6D6D6;
-  margin: 0;
-  padding: 0;
+.wrapper{
+  position: relative;
+  width: 70%;
+  margin: 50px auto;
+  border-radius: 16px;
+  padding: 45px;
+  background-color: #FFFFFF;
 }
-body #root {
+body{
+  background-color: var(--color-gray-light);
+}*{
+  --color-gray-light: #F5F5F5 ;
+  --color-gray-dark: #DDDDDD ;
+  --color-dark: #333333;
+}
+header{
+  position: relative;
+}
+header .head{
+  display: flex;
+  width: 100%;
+}header .head .Logo{
+  cursor: pointer;
+  transition: 150ms;
+  color: var(--color-dark);
+  font-weight: 600;
+  font-size: 20px;
+}header .head .Logo:hover{
+  color: var(--color-gray-dark);
+}header .head .nav{
+  display: flex;
+  list-style-type: none;
+  gap: 10px;
+  margin-left: auto;
+}header .head .nav li{
+  cursor: pointer;
+  transition: 300ms;
+  font-weight: 400;
+  padding: 5px 10px;
+  border-radius: 8px;
+  border: 1px solid rgba(255, 0, 0, 0);
+}header .head .nav .active{
+  background-color: var(--color-gray-dark);
+  color: var(--color-dark);
+}header .head .nav li:hover{
+  background-color: var(--color-gray-light);
+  border: 1px solid var(--color-gray-dark);
+}
+
+
+header .dropdown-card{
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-body #root .wrapper {
-  width: 80%;
-  margin: 0 auto;
-}
-body #root .wrapper header.header {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-family: "Jost", sans-serif;
+  overflow-y: scroll;
+  box-sizing: border-box;
   padding: 10px 20px;
-}
-body #root .wrapper header.header .header-nav {
-  display: flex;
-  gap: 50px;
-  opacity: 0px;
-  text-align: center;
-}
-body #root .wrapper header.header .header-nav a {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  text-decoration: none;
-  padding: 10px;
-  font-weight: 400;
-  color: var(--black-color);
-  font-size: 20px;
-}
-body #root .wrapper header.header .header-buttons {
-  display: flex;
-  gap: 12px;
-}
-body #root .wrapper header.header .header-buttons button {
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  border-radius: 64px;
-  padding: 10px;
+  transition: 400ms;
+  position: absolute;
+  z-index: 99999999;
+  top: 35px;
+  left: 100%;
+  transform: translateX(-100%);
+  width: 400px;
+  min-height: 100px;
+  max-height: 350px;
   background-color: white;
-  border: 1px solid var(--gray-color);
-}
-body #root .wrapper main.main {
-  margin-top: 75px;
-  width: 100%;
-}
-body #root .wrapper main.main h1 {
-  color: var(--beige-color);
-  font-family: "Jost", sans-serif;
-  font-size: 55px;
+  border-radius: 16px;
+  border: 1px solid var(--color-dark);
+}header .dropdown-card p{
+  color: var(--color-dark);
   font-weight: 500;
-  line-height: 70px;
-  text-align: left;
+}header .dropdown-card .card-item{
+  cursor: pointer;
+  transition: 100ms;
+  background-color: var(--color-gray-light);
+  border: 1px solid var(--color-dark);
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  border-radius: 8px;
+  width: 100%;
+  height: 75px;
+}header .dropdown-card .card-item:hover{
+  scale: 1.05;
+}header .dropdown-card .card-item .img-card-item{
+  width: 65px;
+  height: 100%;
+  background-color: var(--color-dark);
+  border-radius: 8px;
+}header .dropdown-card .card-item .img-card-item img{
+  width: 100%;
+  height: 100%;
+  border-radius: 8px 0px 0px 8px;
+  object-fit: cover;
+  object-position: center;
+}header .dropdown-card .info-card-item{
+  margin-left: 10px;
+  width: 80%;
+}header .dropdown-card .info-card-item h2{
+  font-size: 22px;
+  font-weight: 400;
+}header .dropdown-card .info-card-item b{
+  font-weight: 600;
+  font-size: 15px;
+}header .dropdown-card .info-card-item .info-card-delete-icon{
+  float: right;
+  transition: 150ms;
+  position: relative;
+  top: -13px;
+  padding: 10px;
+  color: var(--color-dark);
+}header .dropdown-card .info-card-item .info-card-delete-icon:hover{
+  color: red;
+  scale: 1.1;
+}header .dropdown-card::-webkit-scrollbar{
+  opacity: 0;
+}::-webkit-scrollbar-thumb{
+  width: 10px;
+  background-color: var(--color-dark);
+  transition: 250ms;
+  border-radius: 32px;
+}::-webkit-scrollbar{
+  width: 10px;
+  padding: 10px;
 }
-body #root .wrapper main.main h1 span {
-  color: var(--black-color);
+
+header .dropdown-card-nothing{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15px;
+  padding: 0;
+  box-sizing: border-box;
+  padding: 10px 20px;
+  transition: 400ms;
+  position: absolute;
+  z-index: 99999999;
+  top: 35px;
+  left: 100%;
+  transform: translateX(-100%);
+  width: 350px;
+  height: 100px;
+  background-color: #FFFFFF;
+  border-radius: 16px;
+  border: 1px solid var(--color-gray-dark);
+  color: var(--color-dark);
+}header .dropdown-card-nothing h2{
+  font-size: 17px;
+  font-weight: 600;
 }
-body #root .wrapper main.main .information-contact-grid {
+
+
+
+.Swiper{
+  position: relative;
+  width: 100%;
+  padding: 50px;
+  box-sizing: border-box;
+}.swiper-btn__container{
+  padding: 0px 10px;
+  box-sizing: border-box;
+  display: flex;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  z-index: 9999999;
+}
+.swiper-btn__next-btn {
+  position: sticky;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}.swiper-btn__prev-btn {
+  margin-right: auto;
+}
+
+
+.presentation-site-1{
+  background-image: url(./img/presentation-1.jpg);
+}.presentation-site-2{
+  background-image: url(./img/presentation-2.jpg);
+}.presentation-site-3{
+  background-image: url(./img/presentation-3.jpg);
+}
+.presentation-site-1,
+ .presentation-site-2,
+  .presentation-site-3{
+  transition: 300ms;
   margin-top: 50px;
-  display: grid;
-  width: 100%;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
-}
-body #root .wrapper main.main .information-contact-grid .information-contact-first {
-  border: 1px solid var(--gray-color);
-  padding: 30px 40px;
+  padding: 16px 32px;
   box-sizing: border-box;
-}
-body #root .wrapper main.main .information-contact-grid .information-contact-first .content-information-section-first {
-  margin: 0;
-  padding: 0;
-}
-body #root .wrapper main.main .information-contact-grid .information-contact-first .content-information-section-first p {
-  margin: 0;
-  padding: 0;
-  font-family: "Jost", sans-serif;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 28.9px;
-  text-align: left;
-  color: var(--gray-color);
-}
-body #root .wrapper main.main .information-contact-grid .information-contact-first .content-information-section-first h2 {
-  margin: 0;
-  padding: 0;
-  font-family: "Jost", sans-serif;
-  font-size: 30px;
-  font-weight: 400;
-  line-height: 36px;
-  text-align: left;
-}
-body #root .wrapper main.main .information-contact-grid .information-contact-first :last-child {
-  margin-top: 20px;
-}
-body #root .wrapper main.main .information-contact-grid .information-contact-first .hr {
-  margin-top: 20px;
   width: 100%;
-  background-color: var(--gray-color);
-  height: 1px;
-}
-body #root .wrapper main.main .information-contact-grid .information-contact {
-  border: 1px solid var(--gray-color);
-  padding: 30px 40px;
-  box-sizing: border-box;
-}
-body #root .wrapper main.main .information-contact-grid .information-contact p {
-  margin: 0;
-  padding: 0;
-  font-family: "Jost", sans-serif;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 28.9px;
-  text-align: left;
-  color: var(--gray-color);
-}
-body #root .wrapper main.main .information-contact-grid .information-contact h2 {
-  margin: 0;
-  padding: 0;
-  font-family: "Jost", sans-serif;
-  font-size: 30px;
-  font-weight: 400;
-  line-height: 36px;
-  text-align: left;
-}
-body #root .map-img {
-  margin-top: 25px;
-  height: 550px;
-  min-height: 230px;
-  width: 100%;
-  min-width: 100%;
-  background-image: url(./img/Map.png);
+  height: 500px;
+  border-radius: 16px;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-}
-body #root .partners {
-  width: 100%;
-  margin-top: 175px;
-}
-body #root .partners .top-partners {
-  display: flex;
-  align-items: center;
-  justify-content: end;
-}
-body #root .partners .top-partners :first-child {
-  margin-right: auto;
-}
-body #root .partners .top-partners h1 {
-  font-family: "Jost", sans-serif;
-  font-size: 55px;
-  font-weight: 500;
-  line-height: 70px;
-  text-align: left;
-}
-body #root .partners .top-partners button {
+  background-blend-mode: multiply;
+  background-color: #b2b2b2;
+}.presentation-site-1,
+ .presentation-site-2,
+  .presentation-site-3:hover {
+  scale: 1.005;
+}.presentation-site-1 .content,
+ .presentation-site-2 .content,
+  .presentation-site-3 .content {
+  margin-top: 25px;
+}.presentation-site-1 .content h1, h4, p, button,
+ .presentation-site-2 .content h1, h4, p, button,
+  .presentation-site-3 .content h1, h4, p, button{
+  color: white;
+}.presentation-site-1 .content  h1,
+ .presentation-site-2 .content  h1,
+  .presentation-site-3 .content  h1{
+  font-size: 75px;
+  font-weight: 400;
+}.presentation-site-1 .content button,
+ .presentation-site-2 .content button,
+  .presentation-site-3 .content button{
   cursor: pointer;
+  transition: 150ms;
+  padding: 10px 50px;
+  margin-top: 175px;
+  border-radius: 8px;
+  font-weight: 500;
+  border: none;
+  font-size: 16px;
+  background-color: var(--color-dark);
+}.presentation-site-1 .content button:hover,
+ .presentation-site-2 .content button:hover,
+  .presentation-site-3 .content button:hover{
+  scale: 1.025;
+}
+
+.category{
+  border-radius: 64px;
+  border: 1px solid var(--color-gray-dark);
+  width: 100%;
+  position: sticky;
+  top: 0;
+  background-color: var(--color-gray-light);
+  box-sizing: border-box;
+  margin-top: 100px;
+  transform: translateY(5px);
+  padding: 10px;
   display: flex;
   align-items: center;
-  flex-direction: row;
-  font-size: 20px;
-  border-radius: 64px;
-  padding: 10px;
-  background-color: white;
-  border: 1px solid var(--black-color);
+}.category .category-btns{
+  cursor: pointer;
+  transition: 300ms;
+  font-weight: 500;
+  border-radius: 32px;
+  color: var(--color-dark);
+  background-color: var(--color-gray-dark);
+  font-size: 15px;
+  padding: 5px 10px;
+  margin-left: 10px;
+}.category .category-btns:hover{
+  font-weight: 600;
+  scale: 1.025;
+}.category .category-btns:first-child{
+  margin-left: 0;
 }
-body #root .partners .grid-partners {
+
+.items-section{
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  gap: 25px;
+  flex-wrap: wrap;
+}.items-section .item-card{
+  display: flex;
+  border-radius: 16px;
+  border: 1px solid var(--color-gray-dark);
+  background-color: var(--color-gray-light);
+  width: calc(100% / 3.3);
+  height: 400px;
+  flex-direction: column;
+}.items-section .item-card .img-item-card{
+  cursor: pointer;
+  overflow: hidden;
+  height: 75%;
+  width: 100%;
+  background-color: var(--color-dark);
+  border-radius: 16px 16px 0px 0px;
+}.items-section .item-card .img-item-card img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}.items-section .item-card .info-item-card{
+  display: flex;
+  height: calc(100% - 75%);
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  padding: 10px 20px;
+}.items-section .item-card .info-item-card h2{
+  font-size: 30px;
+  font-weight: 400;
+}.items-section .item-card .info-item-card .info-price-btn-item-card{
+  display: flex;
+  align-items: center;
+}.items-section .item-card .info-item-card .info-price-btn-item-card b{
+  font-size: 18px;
+  font-weight: 600;
+}.items-section .item-card .info-item-card .info-price-btn-item-card button{
+  cursor: pointer;
+  margin-left: auto;
+  transition: 150ms;
+  padding: 5px 15px;
+  border-radius: 8px;
+  font-weight: 400;
+  border: none;
+  font-size: 15px;
+  background-color: var(--color-dark);
+}.items-section .item-card .info-item-card .info-price-btn-item-card button:hover {
+  scale: 1.05;
 }
-body #root .partners .grid-partners .partner {
+
+
+
+.full-item{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 250px;
-  min-height: 140px;
-  border: 1px solid var(--gray-color);
-}
-body #root .partners .grid-partners .partner p {
-  font-family: "Jost", sans-serif;
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 30px;
-  text-align: center;
-}
-body #root .question {
-  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #333333ac;
+  z-index: 99999999999999;
+  overflow: auto;
+}.full-item .full-item-content{
   display: flex;
-  margin-top: 150px;
-  background-color: var(--BlueGray-color);
+  width: 75%;
+  height: 700px;
+  border-radius: 32px;
   box-sizing: border-box;
-}
-body #root .question .question-form {
-  box-sizing: border-box;
-  width: 55%;
-  padding: 50px;
-}
-body #root .question .question-form h1 {
-  margin: 0;
-  padding: 0;
-  font-family: "Jost", sans-serif;
-  font-size: 55px;
-  font-weight: 500;
-  line-height: 70px;
-  text-align: left;
-  color: var(--black-color);
-}
-body #root .question .question-form form.inputs-form {
-  display: flex;
-  margin-top: 30px;
-  flex-direction: column;
-}
-body #root .question .question-form form.inputs-form input {
-  width: 410px;
-  font-size: 18px;
-  font-weight: 400;
-  font-family: "Jost", sans-serif;
-  height: 50px;
-  margin-top: 10px;
-  background: none;
-  color: var(--black-color);
-  border: none;
-  border-bottom: 1px solid var(--dark-gray);
-}
-body #root .question .question-form form.inputs-form input ::-moz-placeholder {
-  color: var(--black-color);
-}
-body #root .question .question-form form.inputs-form input ::placeholder {
-  color: var(--black-color);
-}
-body #root .question .question-form button {
+  background-color: #FFFFFF;
+  border: 4px solid #FFFFFF;
+}.full-item .full-item-content .img-item-card{
+  width: 50%;
   cursor: pointer;
-  font-size: 17px;
-  font-weight: 600;
-  margin-top: 50px;
-  height: 50px;
-  width: 225px;
-  background-color: var(--dark-beige);
-  border: none;
-  color: white;
-  padding: 12px 16px 12px 16px;
-  gap: 10px;
-  opacity: 0px;
-}
-body #root .question .questions-img {
-  height: auto;
-  width: 45%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-body #root .question .questions-img img {
+  background-color: var(--color-dark);
+  height: 100%;
+  border-radius: 32px 0px 0px 32px;
+}.full-item .full-item-content .img-item-card img{
   width: 100%;
   height: 100%;
-}
-
-footer.footer {
-  margin-top: 150px;
-  width: 100%;
-  background-color: var(--BlueGray-color);
-}
-footer.footer .footer-section {
-  width: 80%;
-  margin: 35px auto;
-}
-footer.footer .footer-section .footer-header {
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid var(--dark-gray);
-}
-footer.footer .footer-section .footer-header a {
-  text-decoration: none;
-  color: var(--black-color);
-}
-footer.footer .footer-section .footer-header .footer-icons {
-  display: flex;
-  align-items: center;
-  list-style-type: none;
-  margin-left: auto;
-}
-footer.footer .footer-section .footer-header .footer-icons li {
-  padding: 10px;
-}
-footer.footer .footer-section .footer-main {
-  margin-top: 20px;
-  width: 100%;
-  display: flex;
-  padding-bottom: 40px;
-  border-bottom: 1px solid var(--dark-gray);
-  gap: 75px;
-}
-footer.footer .footer-section .footer-main ul.footer-ul {
-  font-family: "Jost", sans-serif;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  list-style-type: none;
-}
-footer.footer .footer-section .footer-main ul.footer-ul li {
-  font-family: "Jost", sans-serif;
+  border-radius: 32px 0px 0px 32px;
+  object-fit: cover;
+  object-position: center;
+}.full-item .full-item-content .info-item-card{
+  width: 50%;
+  height: 100%;
+  padding: 40px;
+  box-sizing: border-box;
+}.full-item .full-item-content .info-item-card h2{
+  color: var(--color-dark);
+  font-size: 40px;
+  font-weight: 500;
+}.full-item .full-item-content .info-item-card b{
+  color: var(--color-dark);
+  font-size: 75px;
+  font-weight: 600;
+}.full-item .full-item-content .info-item-card h2 span{
+  background-color: var(--color-dark);
+  color: white;
+  padding: 5px 10px;
+  border-radius: 16px;
   font-size: 20px;
   font-weight: 400;
-  line-height: 28.9px;
-  text-align: left;
-}
-footer.footer .footer-section .footer-main ul.footer-ul li h1 {
-  font-weight: 500;
-  font-size: 24px;
-  font-family: "Jost", sans-serif;
-  margin: 0;
-  padding: 0;
-  padding-bottom: 10px;
-}
-footer.footer .footer-section .footer-down {
+}.full-item .full-item-content .info-item-card .info-price-btn-item-card{
+  margin-top: 100%;
   display: flex;
-  align-items: center;
-}
-footer.footer .footer-section .footer-down p {
-  color: #b3b3b3;
-  font-family: "Jost", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 23.12px;
-  text-align: left;
-}
-footer.footer .footer-section .footer-down .footer-img {
+  justify-content: end;
+  transform: translateY(-100%);
+}.full-item .full-item-content .info-item-card .info-price-btn-item-card button{
+  cursor: pointer;
   margin-left: auto;
-}/*# sourceMappingURL=App.css.map */
+  transition: 150ms;
+  padding: 5px 15px;
+  border-radius: 16px;
+  font-weight: 400;
+  border: none;
+  font-size: 24px;
+  background-color: var(--color-dark);
+}.full-item .full-item-content .info-item-card .info-price-btn-item-card button:hover{
+  scale: 1.1;
+}
+
+
+
+@media screen and (max-width: 1920px){
+  .wrapper{
+    width: calc(100% - 50px);
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (max-width: 1440px){
+  .wrapper{
+    width: calc(100% - 20px);
+  }
+  .item-card{
+    min-width: calc(100% / 2.1);
+  }
+}
+
+@media screen and (max-width: 520px){
+  .item-card{
+    min-width: 100%;
+  }
+  .full-item-content {
+    display: flex;
+    flex-direction: column;
+  }
+}
